--- a/MapMaven/Components/Playlists/PlaylistList.razor
+++ b/MapMaven/Components/Playlists/PlaylistList.razor
@@ -82,7 +82,7 @@
                         }
                         <span>@playlist.Title</span>
                         <MudMenu Icon="@Icons.Material.Filled.MoreVert" Class="ml-auto">
-                            <MudMenuItem OnClick="() => OpenEditPlaylistDialog(playlist)">Edit</MudMenuItem>
+                            <MudMenuItem OnClick="() => OpenEditDynamicPlaylistDialog(playlist)">Edit</MudMenuItem>
                             <MudMenuItem OnClick="() => OpenDeletePlaylistDialog(playlist)">Delete</MudMenuItem>
                         </MudMenu>
                     </div>
