--- a/MapMaven/Components/Playlists/FilterOperationInput.razor
+++ b/MapMaven/Components/Playlists/FilterOperationInput.razor
@@ -33,67 +33,12 @@
         case Type type when type == typeof(bool):
             <MudSwitch T="bool" Checked="@(bool.TryParse(FilterOperation.Value, out var boolValue) ? boolValue : false)" CheckedChanged="BooleanValueChanged" Color="Color.Primary" />
             break;
-        case Type type when type == typeof(DateTime):
+        case Type type when type == typeof(DateTimeOffset):
             <MudDatePicker @bind-Value="FilterOperation.Value" Label="Value" Variant="Variant.Outlined" />
             break;
         default:
             <MudTextField @bind-Value="FilterOperation.Value" Label="Value" Variant="Variant.Outlined" />
             break;
     }
+    <MudIconButton Icon="@Icons.Material.Filled.RemoveCircle" OnClick="OnRemove" />
 </div>
-
-@code {
-    [Parameter]
-    public FilterOperation FilterOperation { get; set; }
-
-    DynamicPlaylistFieldOption SelectedFieldOption { get; set; }
-
-    protected override void OnParametersSet()
-    {
-        if (FilterOperation.Field != null)
-            SelectedFieldOption = FieldOptions.FirstOrDefault(field => field.Value == FilterOperation.Field);
-    }
-
-    IEnumerable<DynamicPlaylistFieldOption> FieldOptions => GetFieldOptionsForType(typeof(DynamicPlaylistMap));
-
-    private IEnumerable<DynamicPlaylistFieldOption> GetFieldOptionsForType(Type type, string? parentObjectName = null)
-    {
-        return type
-            .GetProperties()
-            .SelectMany(property =>
-            {
-                if (property.PropertyType.IsClass && property.PropertyType != typeof(string))
-                    return GetFieldOptionsForType(property.PropertyType, parentObjectName: property.Name);
-
-                var value = parentObjectName != null ? $"{parentObjectName}.{property.Name}" : property.Name;
-                var name = parentObjectName != null ? $"{property.Name} ({parentObjectName})" : property.Name;
-
-                return new[] {
-                        new DynamicPlaylistFieldOption
-                        {
-                            Value = value,
-                            Name = name,
-                            Type = property.PropertyType
-                        }
-                };
-            });
-    }
-
-    void OnFieldChanged(DynamicPlaylistFieldOption selectedField)
-    {
-        SelectedFieldOption = selectedField;
-        FilterOperation.Field = SelectedFieldOption.Value;
-        FilterOperation.Value = null;
-
-        if (SelectedFieldOption.Type == typeof(bool))
-        {
-            FilterOperation.Operator = MapMaven.Core.Models.DynamicPlaylists.FilterOperator.Equals;
-            BooleanValueChanged(false);
-        }
-    }
-
-    void BooleanValueChanged(bool value)
-    {
-        FilterOperation.Value = value.ToString();
-    }
-}
