--- a/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
+++ b/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
@@ -1,5 +1,6 @@
 ﻿@using MapMaven.Core.Models.DynamicPlaylists;
 @using MapMaven.Extensions;
+@using MapMaven.Components.Playlists;
 
 @if (SelectedPlaylist == null)
 {
@@ -66,8 +67,26 @@ else
                         </MudListSubheader>
                         @foreach (var filterOperation in configuration.FilterOperations)
                         {
-                            <MudListItem>
+                            <MudListItem Class="py-0">
                                 <FilterOperationInput FilterOperation="filterOperation" OnRemove="() => RemoveFilterOperation(filterOperation)"></FilterOperationInput>
+                            </MudListItem>
+                        }
+                    </MudList>
+                </MudPaper>
+
+                <MudPaper Class="my-4" Style="background-color: var(--mud-palette-drawer-background);">
+                    <MudList>
+                        <MudListSubheader Class="d-flex align-center justify-space-between">
+                            Sorting
+                            <MudIconButton Icon="@Icons.Filled.Add" Variant="Variant.Outlined" Size="Size.Small" OnClick="AddSortOperation" />
+                        </MudListSubheader>
+                        @for (var i = 0; i < configuration.SortOperations.Count; i++)
+                        {
+                            var index = i;
+                            var sortOperation = configuration.SortOperations[index];
+
+                            <MudListItem Class="py-0">
+                                <SortOperationInput SortOperation="sortOperation" OnRemove="() => RemoveSortOperation(sortOperation)" FirstSortOperation="index == 0"></SortOperationInput>
                             </MudListItem>
                         }
                     </MudList>
