--- a/MapMaven/Components/Playlists/FilterOperationInput.razor
+++ b/MapMaven/Components/Playlists/FilterOperationInput.razor
@@ -1,5 +1,6 @@
 ﻿@using MapMaven.Core.Models.DynamicPlaylists;
 @using MapMaven.Core.Models.DynamicPlaylists.MapInfo;
+@using MapMaven.Core.Services;
 @using MapMaven.Core.Utilities;
 
 <div class="d-flex align-center justify-space-between">
@@ -25,12 +26,16 @@
             @bind-Value="FilterOperation.Operator"
             Variant="Variant.Outlined"
             Margin="Margin.Dense"
+            ToStringFunc="filterOperator => (SelectedFieldOption != null ? filterOperator.DisplayName() : string.Empty)"
             Class="px-2">
-            @foreach (var filterOperator in Enum.GetValues<MapMaven.Core.Models.DynamicPlaylists.FilterOperator>())
+            @if (SelectedFieldOption != null)
             {
-                <MudSelectItem Value="filterOperator">
-                    @filterOperator.DisplayName()
-                </MudSelectItem>
+                foreach (var filterOperator in DynamicPlaylistArrangementService.FilterOperatorsForType[SelectedFieldOption.Type])
+                {
+                    <MudSelectItem Value="filterOperator">
+                        @filterOperator.DisplayName()
+                    </MudSelectItem>
+                }
             }
         </MudSelect>
     }
