Added validation to filter operations and sort operations

--- a/MapMaven/Components/Playlists/FilterOperationInput.razor
+++ b/MapMaven/Components/Playlists/FilterOperationInput.razor
@@ -59,3 +59,7 @@
     }
     <MudIconButton Icon="@Icons.Material.Filled.RemoveCircle" OnClick="OnRemove" Class="pl-2 pr-1" />
 </div>
+<div>
+    <ValidationMessage For="() => FilterOperation.Field" />
+    <ValidationMessage For="() => FilterOperation.Value" />
+</div>
