--- a/MapMaven/Components/Playlists/SortOperationInput.razor
+++ b/MapMaven/Components/Playlists/SortOperationInput.razor
@@ -27,3 +27,6 @@
     </MudSelect>
     <MudIconButton Icon="@Icons.Material.Filled.RemoveCircle" OnClick="OnRemove" Class="pa-1" />
 </div>
+<div>
+    <ValidationMessage For="() => SortOperation.Field" />
+</div>
