--- a/MapMaven/wwwroot/css/app.css
+++ b/MapMaven/wwwroot/css/app.css
@@ -20,6 +20,16 @@
     min-height: 0;
 }
 
+.validation-message {
+    color: var(--mud-palette-error) !important;
+    margin: 0;
+    font-size: .75rem;
+    text-align: start;
+    font-weight: 400;
+    line-height: 1.66;
+    letter-spacing: .03333em;
+}
+
 /* MudBlazor overrides */
 .mud-main-content {
     height: 100vh;
