--- a/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
+++ b/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
@@ -34,6 +34,7 @@ else
     var configuration = SelectedPlaylist.DynamicPlaylistConfiguration;
 
     <EditForm Model="@SelectedPlaylist" OnValidSubmit="OnValidSubmit">
+        <ObjectGraphDataAnnotationsValidator />
         <MudDialog>
             <DialogContent>
                 <PlaylistEditor EditPlaylistModel="SelectedPlaylist"></PlaylistEditor>
