--- a/MapMaven/Components/MainLayout.razor
+++ b/MapMaven/Components/MainLayout.razor
@@ -5,6 +5,7 @@
 @inherits LayoutComponentBase
 
 @inject IDialogService DialogService
+@inject IServiceProvider ServiceProvider
 
 <MudThemeProvider Theme="MapMavenTheme.Theme" />
 <MudDialogProvider />
@@ -36,10 +37,20 @@
     [Inject]
     protected BeatSaberFileService BeatSaberToolFileService { get; set; }
 
+    [Inject]
+    protected ApplicationEventService ApplicationEventService { get; set; }
+
+    [Inject]
+    protected ISnackbar Snackbar { get; set; }
+
+    protected ApplicationEventNotificationService ApplicationEventNotificationService { get; private set; }
+
     protected bool InitialSetupDone { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
+        ApplicationEventNotificationService = new ApplicationEventNotificationService(ApplicationEventService, Snackbar);
+
         await ApplicationSettingService.LoadAsync();
 
         BeatSaberToolFileService.BeatSaberInstallLocationObservable.DistinctUntilChanged().Subscribe(location =>
