--- a/MapMaven/Components/Maps/MapCover.razor
+++ b/MapMaven/Components/Maps/MapCover.razor
@@ -6,7 +6,7 @@
 
 @code {
     [Inject]
-    protected BeatSaberDataService BeatSaberDataService { get; set; }
+    protected IBeatSaberDataService BeatSaberDataService { get; set; }
 
     [Parameter]
     public Map Map { get; set; }
