--- a/MapMaven/Components/Replay.razor
+++ b/MapMaven/Components/Replay.razor
@@ -4,7 +4,7 @@
 
 @code {
     [Inject]
-    protected ScoreSaberService ScoreSaberService { get; set; }
+    protected IScoreSaberService ScoreSaberService { get; set; }
 
     [Parameter]
     public Map Map { get; set; }
