--- a/MapMaven/Pages/RankedMaps.razor
+++ b/MapMaven/Pages/RankedMaps.razor
@@ -14,7 +14,7 @@
 
 @code {
     [Inject]
-    protected MapService MapService { get; set; }
+    protected IMapService MapService { get; set; }
 
     MapBrowser MapBrowser { get; set; }
 
