--- a/MapMaven/Pages/Maps.razor
+++ b/MapMaven/Pages/Maps.razor
@@ -10,7 +10,7 @@
 
 @code {
     [Inject]
-    protected MapService MapService { get; set; }
+    protected IMapService MapService { get; set; }
 
     IEnumerable<Map> MapList { get; set; } = new List<Map>();
 
