Integration test WIP

--- a/MapMaven/Components/MainLayout.razor
+++ b/MapMaven/Components/MainLayout.razor
@@ -38,7 +38,7 @@
     protected BeatSaberFileService BeatSaberToolFileService { get; set; }
 
     [Inject]
-    protected ApplicationEventService ApplicationEventService { get; set; }
+    protected IApplicationEventService ApplicationEventService { get; set; }
 
     [Inject]
     protected ISnackbar Snackbar { get; set; }
